<resources>
    <string name="app_name">Login Sing in app</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_sign_in">Please Enter Username and Password</string>
    <string name="in_correct_input">user name or password can not be empty</string>
    <string name="in_correct_pass">Password must be Number</string>
    <string name="in_correct_length">Password must have 8 length and mor</string>
    <string name="success_login">You Login Successfully</string>
    <string name="fail_login">Please Enter Correct Information</string>
    <string name="user_find">User already exist</string>
    <string name="at_first_sign">At first sign up</string>
</resources>