<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.loginpage.viewModel.SignVM" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.Activity.Activity"
        android:background="#fdeffd">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/text_sign_in"
            android:fontFamily="@font/segoe_ui"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="20sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_name_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:afterTextChanged="@{viewModel::afterTextChangedUserName}"
                />

            <EditText
                android:id="@+id/pass_sigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:afterTextChanged="@{viewModel::afterTextChangedPassword}"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_sign_in_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@color/beauty_so_pl"
                android:onClick="@{()->viewModel.onSignBtnClickListener()}"
                />
        </LinearLayout>

    </LinearLayout>
</layout>